# DBmiRNA

./: .gitignore  README.md  pyproject.toml
config/: normalization.json
docs/: architecture.md  db_schema_overview.mmd  identifier_normalization.md
docs/schema/: README.md  dbmirna.dbml
integrations/: dataset_catalog.json  load_plan.json  module_registry.json
schemas/: collection_registry.json  collections.schema.json  mre_predictor_scores.schema.json
sql/: schema.sql
src/dbmirna/: __init__.py  __main__.py  normalization.py  postgres.py  registry.py  utils.py  validation.py
src/dbmirna/loaders/: __init__.py  funmirbench.py  genomic_region_annotator.py  hejret_cache.py  zenodo_mre_tsv.py
